--- a/index.html
+++ b/index.html
@@ -34,10 +34,24 @@
           Sandglass
         </h1>
 
-        <input type='text'
-               class='sandglass__header-search'
-               name='search'
-               placeholder='Search' />
+        <form class="sandglass__search">
+          <input type='text'
+                 class='sandglass__search-term'
+                 name='search'
+                 placeholder='Search' />
+          <input type="text"
+                 class="sandglass__search-start"
+                 name="filter_start"
+                 placeholder="from" />
+          <input type="text"
+                 class="sandglass__search-end"
+                 name="filter_end"
+                 placeholder="to" />
+          <button type="submit"
+                  class="button button--white">
+                  <i class="fa fa-search"></i>
+          </button>
+        </form>
       </header>
 
 
