reworked timeline structure: every day gets an own <ul/> now, to be able to group new created grains directly from the start;

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </header>
 
 
-      <ul class="timeline"></ul>
+      <div class="timeline"></div>
     </div>
 
     <script data-main="sandglass/js/main"
