usability enhancements (trigger search on select, jump to next tracking field when selecting a value) styling enhancements (combine datefields of search)

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
                  class='sandglass__search-term'
                  name='search'
                  placeholder='Search' />
-          <input type="text"
-                 class="sandglass__search-start"
-                 name="filter_start"
-                 placeholder="from" />
-          <input type="text"
-                 class="sandglass__search-end"
-                 name="filter_end"
-                 placeholder="to" />
-          <button type="submit"
-                  class="button button--white">
-                  <i class="fa fa-search"></i>
-          </button>
+
+          <div class="sandglass__search-startend">
+            <input type="text"
+                   class="sandglass__search-start"
+                   name="filter_start"
+                   placeholder="from" />
+            - 
+            <input type="text"
+                   class="sandglass__search-end"
+                   name="filter_end"
+                   placeholder="to" />
+          </div>
         </form>
       </header>
 
