detect potential conflicts with overlapping time and show an indicator;

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <input type="text"
                    class="sandglass__search-start"
                    name="filter_start"
-                   placeholder="from" />
+                   placeholder="always" />
             - 
             <input type="text"
                    class="sandglass__search-end"
                    name="filter_end"
-                   placeholder="to" />
+                   placeholder="today" />
           </div>
         </form>
       </header>
