d3 causes errors for requirejs, so load it in the traditional way for the moment

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <div class="timeline"></div>
     </div>
 
+    <script src="bower_components/d3/d3.js"></script>
+
     <script data-main="sandglass/js/main"
             src="bower_components/requirejs/require.js"></script>
   </body>
