implement autocomplete for tasks, projects

--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -84,7 +84,7 @@
                        name="activity"
                        class="track__activity"
                        id="track__activity"
-                       placeholder="Activity" />
+                       placeholder="Task" />
               </div>
 
               <div class="track__field track__field--inline">
