remove wrong activity wording, apply autocomplete also for tasks

--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -81,9 +81,9 @@
             <div class="track__row">
               <div class="track__field track__field--inline">
                 <input type="text"
-                       name="activity"
-                       class="track__activity"
-                       id="track__activity"
+                       name="task"
+                       class="track__task"
+                       id="track__task"
                        placeholder="Task" />
               </div>
 
