various fixes - hard to describe. from now on smaller commits

--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -114,11 +114,11 @@
             <div class="sandglass__sortby">
               <i class="fa fa-sort sandglass__sortby-icon"></i>
               <button class="sandglass__sortby-button"
-                      value="started">Date</button>
+                      value="start">Date</button>
               <button class="sandglass__sortby-button"
-                      value="activity">Activity</button>
+                      value="task_id">Task</button>
               <button class="sandglass__sortby-button"
-                      value="project">Project</button>
+                      value="project_id">Project</button>
             </div>
 
             <div class="sandglass__search-startend">
