cleanup index.html

--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -26,20 +26,22 @@
           href="css/main.css"
           media="screen" />
   </head>
+
   <body>
     <div class="sandglass">
+
       <header class="sandglass__header">
         <h1 class="sandglass__headline">
           <i class="sandglass__headline-icon fa fa-clock-o"></i>
           Sandglass
         </h1>
-
-        <a href="/logout"
-           class="logout"
-           style="display: none;">Logout</a>
       </header>
+
+      <!-- applicaction code will be injected here -->
+
     </div>
 
+    <!-- load the entire application -->
     <script data-main="js/main"
             src="bower_components/requirejs/require.js"></script>
   </body>
