slightly refactor user.login

--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -7,23 +7,23 @@
           rel="stylesheet"
           type="text/css">
 
-    <link href="css/jquery-ui/custom-theme/jquery-ui-1.10.4.custom.css"
+    <link href="/css/jquery-ui/custom-theme/jquery-ui-1.10.4.custom.css"
           rel="stylesheet"
           type="text/css">
 
     <link rel="stylesheet"
           type="text/css"
-          href="bower_components/font-awesome/css/font-awesome.css"
+          href="/bower_components/font-awesome/css/font-awesome.css"
           media="screen" />
 
     <link rel="stylesheet"
           type="text/css"
-          href="bower_components/normalize-css/normalize.css"
+          href="/bower_components/normalize-css/normalize.css"
           media="screen" />
 
     <link rel="stylesheet"
           type="text/css"
-          href="css/main.css"
+          href="/css/main.css"
           media="screen" />
   </head>
 
@@ -42,7 +42,7 @@
     </div>
 
     <!-- load the entire application -->
-    <script data-main="js/main"
-            src="bower_components/requirejs/require.js"></script>
+    <script data-main="/js/main"
+            src="/bower_components/requirejs/require.js"></script>
   </body>
 </html>
