--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -3,10 +3,6 @@
   <head>
     <title> Sandglass | time tracking</title>
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,getActivity400"
-          rel="stylesheet"
-          type="text/css">
-
     <link href="/css/jquery-ui/custom-theme/jquery-ui-1.10.4.custom.css"
           rel="stylesheet"
           type="text/css">
@@ -40,6 +36,22 @@
       <!-- applicaction code will be injected here -->
 
     </div>
+
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: [ 'Open+Sans:400,300:latin' ] }
+      };
+
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
+    </script>
 
     <!-- load the entire application -->
     <script data-main="/js/main"
