add comments, because comments are good

--- a/sandglass/index.html
+++ b/sandglass/index.html
@@ -37,6 +37,7 @@
 
     </div>
 
+    <!-- load webfonts -->
     <script type="text/javascript">
       WebFontConfig = {
         google: { families: [ 'Open+Sans:400,300:latin' ] }
